--- a/index.html
+++ b/index.html
@@ -400,12 +400,12 @@
 
                 <!-- Premium Contact Form -->
                 <div class="contact-form-container fade-reveal">
-                    <form class="premium-contact-form" id="contactForm" action="https://formsubmit.co/kvnkmar012@gmail.com" method="POST" enctype="application/x-www-form-urlencoded">
+                    <form class="premium-contact-form" id="contactForm" action="https://formsubmit.co/kvnkmar012@gmail.com" method="POST">
                         <!-- FormSubmit Configuration -->
-                        <!-- FormSubmit will show its own thank you page -->
                         <input type="hidden" name="_subject" value="New Mentaris Inquiry">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_template" value="table">
+                        <input type="hidden" name="_next" value="https://kvnkmar.github.io/Mentaris/#contact">
 
                         <div class="form-grid">
                             <div class="form-group">
@@ -554,7 +554,7 @@
                     
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <a href="mailto:hello@mentaris.com">hello@mentaris.com</a>
+                        <a href="/cdn-cgi/l/email-protection#4a222f2626250a272f243e2b38233964292527"><span class="__cf_email__" data-cfemail="a6cec3cacac9e6cbc3c8d2c7d4cfd588c5c9cb">[email&#160;protected]</span></a>
                         <a href="#">Book Consultation</a>
                     </div>
                 </div>
@@ -593,7 +593,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+    
     <!-- Custom JavaScript -->
     <script src="script.js"></script>
 </body>
