--- a/index.html
+++ b/index.html
@@ -498,6 +498,10 @@
                                 <span class="btn-submit-glow"></span>
                                 <span class="btn-submit-shine"></span>
                             </button>
+                            <a href="#" class="button-secondary btn-home-link">
+                                <span class="btn-text">Back to Home</span>
+                                <span class="btn-border"></span>
+                            </a>
                         </div>
 
                         <p class="form-privacy-note">
