--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         <input type="hidden" name="_subject" value="New Mentaris Inquiry">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_template" value="table">
-                        <input type="hidden" name="_next" value="https://kvnkmar.github.io/Mentaris/#contact">
+                        <input type="hidden" name="_next" value="https://kvnkmar.github.io/Mentaris/thankyou.html">
 
                         <div class="form-grid">
                             <div class="form-group">
@@ -498,10 +498,6 @@
                                 <span class="btn-submit-glow"></span>
                                 <span class="btn-submit-shine"></span>
                             </button>
-                            <a href="#" class="button-secondary btn-home-link">
-                                <span class="btn-text">Back to Home</span>
-                                <span class="btn-border"></span>
-                            </a>
                         </div>
 
                         <p class="form-privacy-note">
