--- a/index.html
+++ b/index.html
@@ -65,28 +65,7 @@
     <nav class="navbar-luxury">
         <div class="navbar-content">
             <a href="#" class="logo-container">
-                <svg class="logo-icon" width="32" height="36" viewBox="0 0 100 110" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <!-- Top left branch -->
-                    <line x1="50" y1="45" x2="15" y2="10" stroke="#08D8C9" stroke-width="6" stroke-linecap="round"/>
-                    <circle cx="15" cy="10" r="8" fill="#08D8C9"/>
-                    <!-- Top right branch -->
-                    <line x1="50" y1="45" x2="85" y2="10" stroke="#08D8C9" stroke-width="6" stroke-linecap="round"/>
-                    <circle cx="85" cy="10" r="8" fill="#08D8C9"/>
-                    <!-- Center V shape -->
-                    <line x1="50" y1="45" x2="30" y2="70" stroke="#08D8C9" stroke-width="6" stroke-linecap="round"/>
-                    <line x1="50" y1="45" x2="70" y2="70" stroke="#08D8C9" stroke-width="6" stroke-linecap="round"/>
-                    <!-- Bottom left branch -->
-                    <line x1="30" y1="70" x2="15" y2="100" stroke="#08D8C9" stroke-width="6" stroke-linecap="round"/>
-                    <circle cx="15" cy="100" r="8" fill="#08D8C9"/>
-                    <!-- Bottom center branch -->
-                    <line x1="50" y1="70" x2="50" y2="100" stroke="#08D8C9" stroke-width="6" stroke-linecap="round"/>
-                    <circle cx="50" cy="100" r="8" fill="#08D8C9"/>
-                    <!-- Bottom right branch -->
-                    <line x1="70" y1="70" x2="85" y2="100" stroke="#08D8C9" stroke-width="6" stroke-linecap="round"/>
-                    <circle cx="85" cy="100" r="8" fill="#08D8C9"/>
-                    <!-- Center connection point -->
-                    <circle cx="50" cy="45" r="8" fill="#08D8C9"/>
-                </svg>
+                <img src="apple-touch-icon.png" alt="Mentaris Logo" class="logo-icon">
                 <span class="logo-text-header">MENTARIS</span>
             </a>
             <div class="nav-menu">
