update logo last

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <nav class="navbar-luxury">
         <div class="navbar-content">
             <a href="#" class="logo-container">
-                <img src="apple-touch-icon.png" alt="Mentaris Logo" class="logo-icon">
+                <img src="apple-touch-icon.png" alt="Mentaris Logo" class="logo-icon" style="height: 24px; width: auto;">
                 <span class="logo-text-header">MENTARIS</span>
             </a>
             <div class="nav-menu">
