--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </linearGradient>
                     </defs>
                 </svg>
-                <div class="preloader-m">M</div>
+                <img src="apple-touch-icon.png" alt="Mentaris Logo" class="preloader-logo-img">
             </div>
             <div class="preloader-text-wrapper">
                 <span class="preloader-text">MENTARIS</span>
@@ -515,6 +515,7 @@
             <div class="footer-main">
                 <div class="footer-brand">
                     <a href="#" class="footer-logo-link">
+                        <img src="apple-touch-icon.png" alt="Mentaris Logo" class="footer-logo-icon" style="height: 24px; width: auto;">
                         <span class="footer-logo-text">MENTARIS</span>
                     </a>
                     <p class="footer-tagline">
