--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <meta property="og:title" content="Mentaris | Intelligent Recruitment Solutions">
     <meta property="og:description" content="Sharper insights. Better hires. Powered by SPOT Ai intelligence.">
     <meta property="og:type" content="website">
-    
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
