--- a/index.html
+++ b/index.html
@@ -125,7 +125,20 @@
                 </div>
             </div>
             <div class="hero-logo-animation fade-reveal">
-                <div id="logoAnimation" class="logo-neural"></div>
+                <div class="logo-showcase">
+                    <!-- Orbit rings -->
+                    <div class="orbit orbit-1"></div>
+                    <div class="orbit orbit-2"></div>
+                    <div class="orbit orbit-3"></div>
+                    <!-- Floating dots -->
+                    <div class="orbit-dot dot-1"></div>
+                    <div class="orbit-dot dot-2"></div>
+                    <div class="orbit-dot dot-3"></div>
+                    <!-- Center logo -->
+                    <div class="logo-center">
+                        <img src="apple-touch-icon.png" alt="Mentaris Logo" class="showcase-logo">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="scroll-indicator">
