--- a/index.html
+++ b/index.html
@@ -130,10 +130,16 @@
                     <div class="orbit orbit-1"></div>
                     <div class="orbit orbit-2"></div>
                     <div class="orbit orbit-3"></div>
-                    <!-- Floating dots -->
+                    <!-- Floating dots - outer orbit -->
                     <div class="orbit-dot dot-1"></div>
                     <div class="orbit-dot dot-2"></div>
+                    <!-- Middle orbit dots -->
                     <div class="orbit-dot dot-3"></div>
+                    <div class="orbit-dot dot-4"></div>
+                    <div class="orbit-dot dot-5"></div>
+                    <!-- Inner orbit dots -->
+                    <div class="orbit-dot dot-6"></div>
+                    <div class="orbit-dot dot-7"></div>
                     <!-- Center logo -->
                     <div class="logo-center">
                         <img src="apple-touch-icon.png" alt="Mentaris Logo" class="showcase-logo">
